# target_sources

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
App/: CMakeLists.txt
App/src/: main.cpp
cmake/: plop-config.cmake.in
docker/alpine/: Dockerfile
docker/centos-7/: Dockerfile
libA/: CMakeLists.txt
libA/include/a/: A.h
libA/src/: A.cc
libB/: CMakeLists.txt
libB/include/b/: B.h
libB/src/: B.cc
libHO/: CMakeLists.txt
libHO/include/ho/: HO.h
